--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -6,6 +6,7 @@ input, select {
     border: 1px solid #EBEBEB;
     border-radius: 5px;
     background-color: #F4F4F4;
+    border-radius: 8px;
   }
 }
 
@@ -17,7 +18,9 @@ textarea {
   width: 100%;
   margin: 8px 0px;
   padding: 8px 8px;
-  min-height: 440px;
+  min-height: 200px;
   resize: vertical;
   border: 1px solid #EBEBEB;
+  border-radius: 8px;
+  background-color: #F4F4F4;
 }
