board一覧を表示

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,9 @@
 @import 'form';
 @import 'buttons';
 @import 'board';
+@import 'card';
+@import 'tabs';
+@import 'common';
 
 html {
   word-spacing: 1px;
