--- a/app/views/boards/index.html.haml
+++ b/app/views/boards/index.html.haml
@@ -1,2 +1,26 @@
-.container 
-  %h1 index
+.container
+  %h1.title All Boards 
+  - @boards.each do |board|
+    -# = link_to board_path(board) do
+    .card 
+      .card_content 
+        .card_title 
+          = board.title
+        - if user_signed_in? && current_user.has_written?(board)
+          .board_detail_actions 
+            .dropdown 
+              = image_tag 'actions.svg', class: 'dropdbtn'
+              .dropdown-content.mini 
+                = link_to 'edit', edit_board_path(board)
+                = link_to 'delete', board_path(board), data:  {method: 'delete', confirm: '削除してもいいですか?'}
+        .board_content 
+          = board.content
+        .card_detail
+          = image_tag 'Oval2.png'
+  = link_to new_board_path do
+    .card_new
+      .card_new_title + Add New board
+    
+
+
+        
