--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -4,12 +4,24 @@ $avatar-size: 40px;
 $header-padding-y: 16px;
 $back-icon-size: 16px;
 
-header{
-  p {
-    font-size: 18px;
-    padding: 17px;
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: $header-padding-y 16px;
+  font-weight: bold;
+  border-bottom: 1px solid black;
+
+  a {
     color: black;
-    border-bottom: 1px solid black;
+  }
+
+  &_loginBtn {
+    background-color: $base-bg-color;
+    height: $avatar-size;
+    border-radius: 8px;
+    font-size: 12px;
+    padding: 12px 16px;
+    color: $primary-color;
   }
 
   &_logos {
@@ -21,12 +33,13 @@ header{
       width: $back-icon-size;
       height: $back-icon-size;
       margin: ($avatar-size - $back-icon-size) / 2 8px 0;
-      font: optional;
     }
   }
 
-  &_icom{
-    float: right;
+  &_pageTitle {
+    color: white;
+    line-height: $avatar-size;
+    font-size: $font-lg;
   }
 
   &_avatar {
@@ -35,3 +48,4 @@ header{
     border-radius: 100%;
   }
 }
+
