--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,11 +10,13 @@
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
   %body
     
-    %header
+    %header.header
       .header_logos
-        %p Boards
-      .header_icom
-        -# = image_tag 'Oval.png', class: 'header_avatar dropbtn'
+        %p.header_pageTitle 
+          = link_to 'Boards', root_path
+      - if user_signed_in?
+        .dropdown
+          = image_tag 'Oval.png', class: 'header_avatar dropbtn'
     %p.notice= notice
     %p.alert= alert
     = yield
