editとdeleteの実装追加

--- a/app/assets/stylesheets/board.scss
+++ b/app/assets/stylesheets/board.scss
@@ -61,6 +61,8 @@ $container-padding: 16px;
 
   &_content {
     clear: both;
+    color: $text-base-color;
+    padding-left: 8px;
   }
 
   &_heart {
