boardのvalidatesの設定と日本語化とflashの追加

--- a/app/views/boards/new.html.haml
+++ b/app/views/boards/new.html.haml
@@ -1,7 +1,9 @@
 
-.container 
+.container
   %h1.title New Board
   %ul 
+    - @board.errors.full_messages.each do |message|
+      %li= message
   = form_with(model: @board, local: true) do |f|
     %div 
       = f.label :title, 'タイトル'
