--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -4,7 +4,7 @@ $avatar-size: 32px;
 
 .card {
   background-color: #F4F4F4;
-  margin: 16px 0;
+  margin: 16px 8px;
   cursor: pointer;
   border-radius: 8px;
   height: 160px;
