--- a/app/views/boards/show.html.haml
+++ b/app/views/boards/show.html.haml
@@ -1,4 +1,15 @@
-.board 
-  %h1.board_title= @board.title
-  .board_content 
-    = @board.content
+.container
+  %h1.title= @board.title 
+  - @tasks.each do |task|
+    = link_to board_task_path(@board, task) do
+      .card 
+        .card_content 
+          .card_title 
+            = task.task_title
+          .board_content 
+            = task.task_content
+          .card_detail
+            = image_tag 'Oval2.png'
+  = link_to new_board_task_path(@board) do
+    .card_new
+      .card_new_title + Add New board
