--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -9,6 +9,7 @@ $avatar-size: 32px;
   border-radius: 8px;
   height: 160px;
   position: relative;
+  clear: both;
 
   &_title {
     font-size: 22px;
@@ -46,7 +47,7 @@ $avatar-size: 32px;
       width: $avatar-size;
       height: $avatar-size;
       border-radius: 100%;
-      margin-right: 8px;
+      margin: 16px 8px;
     }
   }
 
@@ -58,6 +59,11 @@ $avatar-size: 32px;
     height: 180px;
     position: relative;
     overflow: hidden;
+    clear: both;
+    margin: 16px 8px 32px 8px;
+    border-radius: 8px;
+
+    
 
     img {
       position: absolute;
