--- a/app/assets/stylesheets/board.scss
+++ b/app/assets/stylesheets/board.scss
@@ -82,4 +82,13 @@ $container-halfpadding: 8px;
       height: $heart-size;
     }
   }
+
+  &_comment {
+    padding: 20px;
+  }
+
+  &_icon {
+    float: left;
+    margin-right: 20px;
+  }
 }
