--- a/app/views/boards/show.html.haml
+++ b/app/views/boards/show.html.haml
@@ -1,7 +1,7 @@
 .container
   %h1.title= @board.title 
   - @tasks.each do |task|
-    = link_to board_task_path(@board, task) do
+    = link_to task_path(task) do
       .card 
         .card_content 
           .card_title 
