--- a/app/views/tasks/show.html.haml
+++ b/app/views/tasks/show.html.haml
@@ -5,8 +5,8 @@
       .dropdown
         = image_tag 'actions.svg', class: 'dropbtn'
         .dropdown-content.mini
-          = link_to '編集する', edit_board_task_path(@task)
-          = link_to '削除する', board_task_path(@task), data: { method: 'delete', confirm: '本当に削除してもいいですか' }
+          = link_to '編集する', edit_task_path(@task)
+          = link_to '削除する', task_path(@task), data: { method: 'delete', confirm: '本当に削除してもいいですか' }
   - if @task.eyecatch.attached?
     .card_image 
       = image_tag @task.eyecatch
@@ -15,5 +15,12 @@
       .card_title 
         = @task.task_content 
   %h2.title Comment
+  - @comments.each do |comment|
+    .board_comment
+      .board_icon= image_tag 'Oval2.png'
+      %p= comment.comment_content
+  = link_to new_task_comment_path(@task) do
+    .card_new
+      .card_new_title + Add New Comment
 
 
